external-crates/move/crates/move-compiler/tests/development/typing/signed_int_literal_overflow.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E01006]: invalid number literal
  ┌─ tests/development/typing/signed_int_literal_overflow.move:4:22
  │
4 │         let _a: i8 = 128i8;
  │                      ^^^^^ Invalid numerical literal. The value is too large for 'i8'. Did you mean '-128i8'?
